# masters2026-qual

./: .gitignore  .gitmodules  README.md  best_autoset.txt  fujihara-memo.md  jj1guj-memo.md
.github/: copilot-instructions.md
.github/workflows/: score.yml
config/: config.toml
scripts/: prepare_tools.sh  run_score.sh  setup.sh
solver/: Cargo.toml
solver/scripts/: annealer_multi.sh
solver/src/: enumerate_automata.rs  main.rs
visualizer/: Cargo.toml  README.md  run.sh
visualizer/src/: main.rs
visualizer/static/: index.html
